--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ os:
 before_install:
   - date
   - cd ${HOME}
-  - sudo apt-get -qq -y update
-  - sudo apt-get -qq -y install libgc-dev
-  - sudo apt-get -qq -y install libgmp3-dev
+  - ${TRAVIS_BUILD_DIR}/travis-ci/installpkg.sh
   - export ATSHOME=${HOME}/ats-lang-anairiats-0.2.11
   - export ATSHOMERELOC=ATS-0.2.11
   - export PATSHOME=${TRAVIS_BUILD_DIR}
