--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,7 +37,7 @@ install:
     - 'echo Build ATS1(with GC support)'
     - '%CYG_ROOT%/bin/bash -lc "wget -q -P /tmp %ATS1PACKURL%"'
     - '%CYG_ROOT%/bin/bash -lc "tar -C /tmp -zxvf /tmp/%ATS1PACKTGZ%"'
-    - '%CYG_ROOT%/bin/bash -lc "cd %ATSHOME%; exec 0</dev/null; ./configure&&make all"'
+    - '%CYG_ROOT%/bin/bash -lc "cd %ATSHOME%; exec 0</dev/null; ./configure&&make all|grep -v gcc"'
     - 'echo Build ATS1(with GC support) is finished!'
     - 'echo Download ATS2... (needed to use symlink.)'
     - '%CYG_ROOT%/bin/bash -lc "cd /tmp && git clone https://github.com/githwxi/ATS-Postiats.git"'
@@ -53,6 +53,6 @@ build_script:
     - cmd: 'echo Build ATS2...'
     - cmd: '%CYG_ROOT%/bin/bash -lc "cd $PATSHOME; exec 0</dev/null; make -f codegen/Makefile_atslib"'
     - cmd: '%CYG_ROOT%/bin/bash -lc "cd $PATSHOME; exec 0</dev/null; make -f Makefile_devl src_depend"'
-    - cmd: '%CYG_ROOT%/bin/bash -lc "cd $PATSHOME; exec 0</dev/null; make -f Makefile_devl"'
+    - cmd: '%CYG_ROOT%/bin/bash -lc "cd $PATSHOME; exec 0</dev/null; make -f Makefile_devl|grep -v gcc"'
 
 test: off
