--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,11 +40,11 @@ install:
     - '%CYG_ROOT%/bin/bash -lc "cd %ATSHOME%; exec 0</dev/null; ./configure&&make all|grep -v gcc"'
     - 'echo Build ATS1(with GC support) is finished!'
     - 'echo Download ATS2... (needed to use symlink.)'
-#    - '%CYG_ROOT%/bin/bash -lc "cd /tmp && git clone https://github.com/githwxi/ATS-Postiats.git"'
-    - '%CYG_ROOT%/bin/bash -lc "cd /tmp && git clone https://github.com/master-q/ATS-Postiats.git"'
+#    - '%CYG_ROOT%/bin/bash -lc "cd /tmp && git clone -q https://github.com/githwxi/ATS-Postiats.git"'
+    - '%CYG_ROOT%/bin/bash -lc "cd /tmp && git clone -q https://github.com/master-q/ATS-Postiats.git"'
     - '%CYG_ROOT%/bin/bash -lc "cd $PATSHOME && git checkout %APPVEYOR_REPO_COMMIT%"'
     - 'echo Download ATS2-contrib...'
-    - '%CYG_ROOT%/bin/bash -lc "cd /tmp && git clone https://github.com/githwxi/ATS-Postiats-contrib.git"'
+    - '%CYG_ROOT%/bin/bash -lc "cd /tmp && git clone -q https://github.com/githwxi/ATS-Postiats-contrib.git"'
 
 build_script:
     - cmd: 'echo Cygwin root is: %CYG_ROOT%'
