--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,13 +30,14 @@ init:
 install:
     - 'echo Setup Cygwin dependencies'
     - 'appveyor DownloadFile http://cygwin.com/setup-%CYG_ARCH%.exe -FileName setup.exe'
-    - 'setup.exe -qnNdO -R "%CYG_ROOT%" -s "%CYG_MIRROR%" -l "%CYG_CACHE%" -P make -P autoconf -P automake -P gcc-core -P libtool -P intltool -P pkg-config -P git -P wget -P libgc-devel -P libgmp-devel > NUL'
+    - 'setup.exe -qnNdO -R "%CYG_ROOT%" -s "%CYG_MIRROR%" -l "%CYG_CACHE%" -P make -P gcc-core -P libtool -P intltool -P pkg-config -P git -P libgc-devel -P libgmp-devel > NUL'
     - 'echo Checking the Cygwin setup'
     - '%CYG_ROOT%/bin/bash -lc "cygcheck -dc cygwin"'
     - 'echo Setup Cygwin dependencies is finished!'
     - 'echo Build ATS1(with GC support)'
-    - '%CYG_ROOT%/bin/bash -lc "wget -q -P /tmp %ATS1PACKURL%"'
-    - '%CYG_ROOT%/bin/bash -lc "tar -C /tmp -zxf /tmp/%ATS1PACKTGZ%"'
+    - 'appveyor DownloadFile %ATS1PACKURL% -FileName %ATS1PACKTGZ%'
+#    - '%CYG_ROOT%/bin/bash -lc "wget -q -P /tmp %ATS1PACKURL%w"'
+    - '%CYG_ROOT%/bin/bash -lc "tar -C /tmp -zxf %ATS1PACKTGZ%"'
     - '%CYG_ROOT%/bin/bash -lc "cd %ATSHOME%; exec 0</dev/null; ./configure&&make all"'
     - 'echo Build ATS1(with GC support) is finished!'
     - 'echo Download ATS2... (needed to use symlink.)'
