--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,7 +37,7 @@ install:
     - 'echo Build ATS1(with GC support)'
     - 'appveyor DownloadFile %ATS1PACKURL% -FileName %ATS1PACKTGZ%'
 #    - '%CYG_ROOT%/bin/bash -lc "wget -q -P /tmp %ATS1PACKURL%w"'
-    - '%CYG_ROOT%/bin/bash -lc "tar -C /tmp -zxf %ATS1PACKTGZ%"'
+    - '%CYG_ROOT%/bin/bash -lc "tar -C /tmp -zxf `cygpath -u %APPVEYOR_BUILD_FOLDER%`/%ATS1PACKTGZ%"'
     - '%CYG_ROOT%/bin/bash -lc "cd %ATSHOME%; exec 0</dev/null; ./configure&&make all"'
     - 'echo Build ATS1(with GC support) is finished!'
     - 'echo Download ATS2... (needed to use symlink.)'
