--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,10 +35,9 @@ install:
     - '%CYG_ROOT%/bin/bash -lc "cygcheck -dc cygwin"'
     - 'echo Setup Cygwin dependencies is finished!'
     - 'echo Build ATS1(with GC support)'
-    - 'appveyor DownloadFile %ATS1PACKURL% -FileName %ATS1PACKTGZ%'
 #    - '%CYG_ROOT%/bin/bash -lc "wget -q -P /tmp %ATS1PACKURL%w"'
-    - '%CYG_ROOT%/bin/bash -lc "echo tar -C /tmp -zxf `cygpath -u %APPVEYOR_BUILD_FOLDER%`/%ATS1PACKTGZ%"' # try
-    - '%CYG_ROOT%/bin/bash -lc "tar -C /tmp -zxf `cygpath -u %APPVEYOR_BUILD_FOLDER%`/%ATS1PACKTGZ%"'
+    - 'appveyor DownloadFile %ATS1PACKURL% -FileName %CYG_ROOT%/%ATS1PACKTGZ%'
+    - '%CYG_ROOT%/bin/bash -lc "tar -C /tmp -zxf /%ATS1PACKTGZ%"'
     - '%CYG_ROOT%/bin/bash -lc "cd %ATSHOME%; exec 0</dev/null; ./configure&&make all"'
     - 'echo Build ATS1(with GC support) is finished!'
     - 'echo Download ATS2... (needed to use symlink.)'
